feat: added endpoint for measurements notifications
